force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__rel_1732247655925_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732247655925_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GiftCommitment_ContactId_map_Individ_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>GiftCommitment_ContactId_map_Individ_rel</relationshipLabel>
    <relationshipName>rel_1732247655925_end</relationshipName>
    <type>Lookup</type>
</CustomField>