force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__TotalCurrentMonth__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalCurrentMonth__c</fullName>
    <label>Total Current Month</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalCurrentMonth</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>