force-app/main/default/objects/ssot__GiftCommitment__dlm/fields/ssot__TotalCurrentYear__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalCurrentYear__c</fullName>
    <label>Total Current Year</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalCurrentYear</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>